crates/embucket-functions/src/tests/datetime/snapshots/to_timestamp/query_timestamp_date.snap
---
source: crates/embucket-functions/src/tests/datetime/to_timestamp.rs
description: "\"SELECT TO_TIMESTAMP('2022-01-01 11:30:00'::date)\""
---
Ok(
    [
        "+-------------------------------------------+",
        "| to_timestamp(Utf8(\"2022-01-01 11:30:00\")) |",
        "+-------------------------------------------+",
        "| 2022-01-01T00:00:00                       |",
        "+-------------------------------------------+",
    ],
)
