crates/embucket-functions/src/tests/datetime/snapshots/to_timestamp/query_timestamp_scale_decimal.snap
---
source: crates/embucket-functions/src/tests/datetime/to_timestamp.rs
description: "r#\"SELECT\n       TO_TIMESTAMP(1000000000::DECIMAL, 0) AS \"Scale in seconds\",\n       TO_TIMESTAMP(1000000000::DECIMAL, 3) AS \"Scale in milliseconds\",\n       TO_TIMESTAMP(1000000000::DECIMAL, 6) AS \"Scale in microseconds\",\n       TO_TIMESTAMP(1000000000::DECIMAL, 9) AS \"Scale in nanoseconds\";\"#"
---
Ok(
    [
        "+---------------------+-----------------------+-----------------------+----------------------+",
        "| Scale in seconds    | Scale in milliseconds | Scale in microseconds | Scale in nanoseconds |",
        "+---------------------+-----------------------+-----------------------+----------------------+",
        "| 2001-09-09T01:46:40 | 1970-01-12T13:46:40   | 1970-01-01T00:16:40   | 1970-01-01T00:00:01  |",
        "+---------------------+-----------------------+-----------------------+----------------------+",
    ],
)
