crates/embucket-functions/src/tests/datetime/snapshots/to_timestamp/query_timestamp_timestamp.snap
---
source: crates/embucket-functions/src/tests/datetime/to_timestamp.rs
description: "\"SELECT TO_TIMESTAMP(1000000000::TIMESTAMP)\""
---
Ok(
    [
        "+---------------------------------+",
        "| to_timestamp(Int64(1000000000)) |",
        "+---------------------------------+",
        "| 2001-09-09T01:46:40             |",
        "+---------------------------------+",
    ],
)
